data/all_generated_tests/raw_wast_tests/call_StackCorruption_3246.wast
;; 5. **Test Description**: Recursively call a function, accumulating arguments on the stack.    - **Constraint**: Tests the limits of stack depth and argument handling in recursion.    - **Relation to Stack Corruption**: Ensures stack remains consistent across recursive calls and does not overflow or underflow.

(assert_invalid
  (module
    (func $recursive (param i32 i32) (result i32)
      (local.get 0)
      (if (result i32)
        (i32.eqz)
        (then (local.get 1))
        (else
          (local.get 0)
          (i32.const 1)
          (i32.sub)
          (local.get 1)
          (i32.const 1)
          (i32.add)
          (call 0)
        )
      )
    )
    (func (param i32) (result i32)
      (local.get 0)
      (i32.const 10)
      (call 0)
    )
  )
  "type mismatch"
)